# taxi_autonomous

./: CMakeLists.txt  README.md  package.xml
config/: coords_drive_normal.yaml  coords_drive_normal_traffic.yaml  coords_drive_to_charge.yaml  coords_drive_to_charge_traffic.yaml  problem_init.yaml
launch/: commands  my_taxi_planner_launch.py  sim_car.launch.py  taxi_planner_launch.py
maps/: map.yaml
params/: diff_drive_controller_param.yaml  nav2_params.yaml  plansys2_params.yaml
pddl/: domain.pddl  problem.pddl
src/: MoveAction.cpp  charge_action_node.cpp  cmd_vel_bridge.cpp  cmd_vel_publisher.cpp  controller_node.cpp  drive_normal_action_node.cpp  drive_normal_traffic_action_node.cpp  drive_to_charge_action_node.cpp  drive_to_charge_traffic_action_node.cpp  dropoff_action_node.cpp  move_action_node.cpp  pickup_action_node.cpp
worlds/: diff_car_ros2_controll.xacro  robotica.sdf
